// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsApplicationDate fcfs listing displays Application opens when listing is a fcfs sale listing and applications have not opened 1`] = `
<DocumentFragment>
  <div
    class="w-full mb-8 md:mb-0"
  >
    <div
      class="seeds-common-message is-fullwidth seeds-message justify-start leading-5"
      data-variant="primary"
    >
      <span
        class="align-icon"
      >
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 32 32"
          >
            <path
              d="M23.258 15.994h-7.251v-11.266c0-0.368-0.299-0.667-0.667-0.667s-0.667 0.299-0.667 0.667v11.931c0 0.368 0.299 0.667 0.667 0.667h7.917c0.368 0 0.667-0.299 0.667-0.667s-0.298-0.667-0.667-0.667z"
            />
            <path
              d="M16 0.333c-8.64 0-15.669 7.029-15.669 15.669s7.029 15.669 15.669 15.669c8.64 0 15.669-7.027 15.669-15.667s-7.029-15.67-15.669-15.67zM16 30.338c-7.906 0-14.336-6.43-14.336-14.334s6.43-14.338 14.336-14.338 14.336 6.43 14.336 14.336c0 7.904-6.43 14.336-14.336 14.336z"
            />
          </svg>
        </span>
      </span>
      <span
        data-part="content"
      >
        Applications open
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsApplicationDate fcfs listing displays Applications Closed when listing is a fcfs sale and applications are open 1`] = `
<DocumentFragment>
  <div
    class="w-full mb-8 md:mb-0"
  >
    <div
      class="seeds-common-message is-fullwidth seeds-message justify-start leading-5"
      data-variant="alert"
    >
      <span
        class="align-icon"
      >
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="red-700"
            viewBox="0 0 32 32"
          >
            <path
              d="M23.258 15.994h-7.251v-11.266c0-0.368-0.299-0.667-0.667-0.667s-0.667 0.299-0.667 0.667v11.931c0 0.368 0.299 0.667 0.667 0.667h7.917c0.368 0 0.667-0.299 0.667-0.667s-0.298-0.667-0.667-0.667z"
            />
            <path
              d="M16 0.333c-8.64 0-15.669 7.029-15.669 15.669s7.029 15.669 15.669 15.669c8.64 0 15.669-7.027 15.669-15.667s-7.029-15.67-15.669-15.67zM16 30.338c-7.906 0-14.336-6.43-14.336-14.334s6.43-14.338 14.336-14.338 14.336 6.43 14.336 14.336c0 7.904-6.43 14.336-14.336 14.336z"
            />
          </svg>
        </span>
      </span>
      <span
        data-part="content"
      >
        Applications closed
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsApplicationDate fcfs listing displays Applications closed when listing is a fcfs sale and applications have closed 1`] = `
<DocumentFragment>
  <div
    class="w-full mb-8 md:mb-0"
  >
    <div
      class="seeds-common-message is-fullwidth seeds-message justify-start leading-5"
      data-variant="primary"
    >
      <span
        class="align-icon"
      >
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 32 32"
          >
            <path
              d="M23.258 15.994h-7.251v-11.266c0-0.368-0.299-0.667-0.667-0.667s-0.667 0.299-0.667 0.667v11.931c0 0.368 0.299 0.667 0.667 0.667h7.917c0.368 0 0.667-0.299 0.667-0.667s-0.298-0.667-0.667-0.667z"
            />
            <path
              d="M16 0.333c-8.64 0-15.669 7.029-15.669 15.669s7.029 15.669 15.669 15.669c8.64 0 15.669-7.027 15.669-15.667s-7.029-15.67-15.669-15.67zM16 30.338c-7.906 0-14.336-6.43-14.336-14.334s6.43-14.338 14.336-14.338 14.336 6.43 14.336 14.336c0 7.904-6.43 14.336-14.336 14.336z"
            />
          </svg>
        </span>
      </span>
      <span
        data-part="content"
      >
        Applications open: December 31, 2049 at 5:00 PM Pacific Time
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsApplicationDate lottery listing displays Application Deadline when listing is a sale and due date has not passed 1`] = `
<DocumentFragment>
  <div
    class="w-full mb-8 md:mb-0"
  >
    <div
      class="seeds-common-message is-fullwidth seeds-message justify-start leading-5"
      data-variant="primary"
    >
      <span
        class="align-icon"
      >
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 32 32"
          >
            <path
              d="M23.258 15.994h-7.251v-11.266c0-0.368-0.299-0.667-0.667-0.667s-0.667 0.299-0.667 0.667v11.931c0 0.368 0.299 0.667 0.667 0.667h7.917c0.368 0 0.667-0.299 0.667-0.667s-0.298-0.667-0.667-0.667z"
            />
            <path
              d="M16 0.333c-8.64 0-15.669 7.029-15.669 15.669s7.029 15.669 15.669 15.669c8.64 0 15.669-7.027 15.669-15.667s-7.029-15.67-15.669-15.67zM16 30.338c-7.906 0-14.336-6.43-14.336-14.334s6.43-14.338 14.336-14.338 14.336 6.43 14.336 14.336c0 7.904-6.43 14.336-14.336 14.336z"
            />
          </svg>
        </span>
      </span>
      <span
        data-part="content"
      >
        Application deadline: December 31, 2049 at 5:00 PM Pacific Time
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsApplicationDate lottery listing displays Applications Closed when listing is a rental and due date has passed 1`] = `
<DocumentFragment>
  <div
    class="w-full mb-8 md:mb-0"
  >
    <div
      class="seeds-common-message is-fullwidth seeds-message justify-start leading-5"
      data-variant="alert"
    >
      <span
        class="align-icon"
      >
        <span
          class="ui-icon ui-medium"
        >
          <svg
            fill="red-700"
            viewBox="0 0 32 32"
          >
            <path
              d="M23.258 15.994h-7.251v-11.266c0-0.368-0.299-0.667-0.667-0.667s-0.667 0.299-0.667 0.667v11.931c0 0.368 0.299 0.667 0.667 0.667h7.917c0.368 0 0.667-0.299 0.667-0.667s-0.298-0.667-0.667-0.667z"
            />
            <path
              d="M16 0.333c-8.64 0-15.669 7.029-15.669 15.669s7.029 15.669 15.669 15.669c8.64 0 15.669-7.027 15.669-15.667s-7.029-15.67-15.669-15.67zM16 30.338c-7.906 0-14.336-6.43-14.336-14.334s6.43-14.338 14.336-14.338 14.336 6.43 14.336 14.336c0 7.904-6.43 14.336-14.336 14.336z"
            />
          </svg>
        </span>
      </span>
      <span
        data-part="content"
      >
        Applications closed: December 31, 1999 at 5:00 PM Pacific Time
      </span>
    </div>
  </div>
</DocumentFragment>
`;
